# cam_module

./: CMakeLists.txt  cam_module  test_image_processor
config/: config.yaml
etc/daemon/: cam_module.service  start_script.sh
etc/python/: band_classifier_rf.pkl  band_classifier_svm.pkl  dataset_color_features.csv  dataset_features.csv  requirements.txt
include/camera/: capture_thread.hpp  v4l2_capture.hpp
include/image_processor/: image_processor.hpp
include/json/: json_client.hpp  json_codec.hpp
include/logger/: logger.hpp
include/network/: resolve_hostname.hpp  tcp_socket.hpp  tcp_thread.hpp  udp_socket.hpp
include/network/tcp/: tcp_socket.hpp  tcp_thread.hpp
include/network/udp/: udp_socket.hpp  udp_thread.hpp
include/read_config/: read_config.hpp
include/read_resistor_value/: read_resistor_value.hpp
include/send_image/: send_image.hpp
models/: band_classifier_rf.pkl
src/: main.cpp
src/camera/: capture_thread.cpp  v4l2_capture.cpp
src/image_processor/: image_processor.cpp
src/inference/: correction.py  read_resistor_value.py
src/json/: json_client.cpp  json_codec.cpp
src/network/: resolve_hostname.cpp  tcp_socket.cpp  tcp_thread.cpp  udp_socket.cpp
src/network/tcp/: tcp_socket.cpp  tcp_thread.cpp
src/network/udp/: udp_socket.cpp
src/read_config/: read_config.cpp
src/read_resistor_value/: read_resistor_value.cpp
src/send_image/: send_image.cpp  udp_thread.cpp
test/: Makefile  tcp_thread_test  tcp_thread_test.cpp
test/camera/: Makefile  get_frame.cpp
test/inference_and_udp_test/: CMakeLists.txt  inference_test.cpp
test/inference_test/: CMakeLists.txt  inference_test.cpp
test/tcp_thread/: Makefile  tcp_thread_test.cpp
